--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body {
     background-color: rgb(240, 240, 240);
     padding: 20px;
     border-radius: 20px;
+
+    box-shadow: -5px 5px 0 #33333368;
+ 
 }
 
 .content2 {
@@ -33,12 +36,19 @@ body {
 .caixa-texto {
     width: 88%;
     padding: 10px;
+    border: solid 1px;
+    border-color: gray;
+    border-radius: 10px;
 }
 
 .caixa-message{
     width: 100%;
     margin-top: 10px;
     padding: 10px;
+
+    border-radius: 10px;
+    border: solid 1px;
+    border-color: gray;
 }
 
 .seletorPais {
@@ -46,6 +56,9 @@ body {
     margin-right: 5px;
     text-align: center;
     cursor: pointer;
+
+    border-radius: 10px;
+    border-color: gray;
 }
 
 .btn-chat{
@@ -55,7 +68,7 @@ body {
     margin-top: 10px;
     padding: 10px;
 
-    border-radius: 5px;
+    border-radius: 10px;
     color: rgb(236, 236, 236);
     border: none;
     
@@ -72,8 +85,9 @@ body {
 }
 
 .a-contato{
-    margin-right: 5px;
+    margin-right: 10px;
     text-align: right;
+    color: rgb(64, 84, 113);
 }
 
 /* ---------- RESPONSIVE ---------- */
